// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DateRange customizing input props 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="From (Mon YYYY)"
                  required={false}
                  value=""
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <p
          className="c10"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="To (Mon YYYY)"
                  required={false}
                  value=""
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange default 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value=""
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <p
          className="c10"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value=""
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange default start and end date 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="01 Jan 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <p
          className="c10"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jan 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange disabled range validation 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="10 Sep 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <p
          className="c10"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jul 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange individual input error 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  color: #cc1439;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c13 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c11 .c12 {
  margin-bottom: 8px;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #cc1439;
  border-color: #cc1439;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c15 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c15:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c15:focus ~ svg {
  fill: #00438f;
}

.c15::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c15::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c15:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c15::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={true}
                  aria-label="Select a start date"
                  aria-required={true}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={true}
                  value=""
                />
                <svg
                  aria-hidden={true}
                  className="c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c9"
          color="red"
        >
          <svg
            aria-hidden={true}
            className="c10"
            color="currentColor"
            fill="currentColor"
            focusable={false}
            height="24px"
            icon="error"
            mr="x1"
            size="24px"
            title={null}
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <div
            className="c11"
          >
            <p
              className="c12 c13"
              color="currentColor"
              disabled={false}
              fontSize="medium"
            >
              Start date is required
            </p>
          </div>
        </div>
      </div>
      <div
        className="c14"
      >
        <p
          className="c12 c13"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c15"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="10 Sep 2019"
                />
                <svg
                  aria-hidden={true}
                  className="c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange with custom error 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  color: #cc1439;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c11 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c14 .c10 {
  margin-bottom: 8px;
}

.c14 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jul 2019"
                />
                <svg
                  aria-hidden={true}
                  className="c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c9"
      >
        <p
          className="c10 c11"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="10 Sep 2019"
                />
                <svg
                  aria-hidden={true}
                  className="c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c12"
      color="red"
    >
      <svg
        aria-hidden={true}
        className="c13"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="error"
        mr="x1"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        className="c14"
      >
        <p
          className="c10 c11"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          This range conflicts with another range
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange with default start and end times 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c11 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c10:hover {
  color: #434d59;
}

.c9 {
  margin-left: 8px;
}

.c13 {
  margin-right: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jul 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker c9 css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-r447wv-singleValue"
                  >
                    03:30 AM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a start time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-4-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c10"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <p
          className="c12"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker c13 css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-r447wv-singleValue"
                  >
                    01:30 PM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select an end time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-5-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c10"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="10 Sep 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange with time error 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c11 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c10:hover {
  color: #434d59;
}

.c9 {
  margin-left: 8px;
}

.c13 {
  margin-right: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jul 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker c9 css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-r447wv-singleValue"
                  >
                    01:30 PM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a start time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-6-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c10"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <p
          className="c12"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker c13 css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-r447wv-singleValue"
                  >
                    10:30 AM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select an end time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-7-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c10"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jul 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DateRange with times 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-top: 8px;
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c11 {
  padding-left: 4px;
  padding-right: 4px;
  max-height: 38px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c1 {
  color: #011e38;
  display: inline-block;
}

.c2 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c4 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

.c10 {
  color: currentColor;
  min-width: 22px;
  color: #434d59;
}

.c10:hover {
  color: #434d59;
}

.c9 {
  margin-left: 8px;
}

.c13 {
  margin-right: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <label
      className="c1 "
      color="black"
      style={
        Object {
          "display": "block",
        }
      }
    >
      <div
        className=""
        data-testid="field-label"
      >
        <span
          className="c2"
        >
          Date range
        </span>
      </div>
    </label>
    <div
      className="c3"
      display="inline-flex"
    >
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select a start date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="01 Jan 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker c9 css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-1yhx6vz-Placeholder"
                  >
                    HH:MM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select a start time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-2-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c10"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c11"
      >
        <p
          className="c12"
          color="currentColor"
          disabled={false}
          fontSize="medium"
        >
          -
        </p>
      </div>
      <div
        className="c4"
      >
        <div
          data-testid="select-container"
        >
          <div
            className="nds-time-picker c13 css-2b097c-container"
            onKeyDown={[Function]}
          >
            <div
              data-testid="select-control"
            >
              <div
                className=" css-1liu8yu-Control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-7zc8my"
                >
                  <div
                    className=" css-1yhx6vz-Placeholder"
                  >
                    HH:MM
                  </div>
                  <div
                    data-testid="select-input"
                  >
                    <div
                      className="css-17yls17-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          aria-label="Select an end time"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={null}
                          id="react-select-3-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-173cxbq-IndicatorsContainer"
                >
                  <span
                    className=" css-4z5mi-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-19phze7-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden={true}
                      className="Icon-fc7twp-0 c10"
                      color="currentColor"
                      fill="currentColor"
                      focusable={false}
                      height="22px"
                      icon="queryBuilder"
                      size="22px"
                      title={null}
                      viewBox="0 0 24 24"
                      width="22px"
                    >
                      <path
                        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c4  nds-date-picker"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="Select an end date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jan 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
